--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,68 +2,76 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.co.parnas">
 
-    <uses-permission android:name="android.permission.INTERNET" android:required="true"/>
+    <uses-permission
+        android:name="android.permission.INTERNET"
+        android:required="true" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera2.full" android:required="false"/>
+
+    <uses-feature
+        android:name="android.hardware.camera2.full"
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="true"
         android:theme="@style/WhiteActionBar"
-        android:requestLegacyExternalStorage="true">
+        android:usesCleartextTraffic="true">
+
+        <activity
+            android:name=".menu.TierActivity"
+            android:exported="true"/>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
                     android:host="oauth"
                     android:scheme="@string/kakao_app_key_add_kakao" />
-
             </intent-filter>
         </activity>
-
         <activity
             android:name=".menu.SplashActivity"
-            android:theme="@style/WhiteActionBar"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/WhiteActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <!-- 백그라운드에서 푸시오는 경우 이벤트 처리 -->
-                <action android:name="NOTIFICATION_CLICK"/>
+                <action android:name="NOTIFICATION_CLICK" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-
         <activity
-            android:name="kr.co.parnas.menu.MainActivity"
+            android:name=".menu.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:exported="true"/>
-
-        <!-- FCM -->
+            android:exported="true" /> <!-- FCM -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/channel_id" />
-        <service android:name=".push.MyFirebaseMessagingService"
+
+        <service
+            android:name=".push.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </service>
-        <!-- FCM End -->
-
+        </service> <!-- FCM End -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
