--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "kr.co.parnas"
         minSdkVersion 28
         targetSdkVersion 32
-        versionCode 23120701
+        versionCode 23122201
         versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -70,20 +70,30 @@ android {
 
 dependencies {
     // 카카오
-    implementation'com.kakao.sdk:v2-user:2.13.0'
+    implementation("com.kakao.sdk:v2-user:2.13.0")
+
+    // 뷰페이져에 들어가는 인디케이터
+    implementation("com.tbuonomo:dotsindicator:5.0")
+
+    // 바코드 생성
+    implementation ("com.journeyapps:zxing-android-embedded:4.2.0")
+
+    // glide
+    implementation ("com.github.bumptech.glide:glide:4.15.1")
+    annotationProcessor ("com.github.bumptech.glide:compiler:4.12.0")
 
     implementation ("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation ("androidx.core:core-ktx:1.12.0")
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.3.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
-    implementation 'androidx.databinding:databinding-runtime:8.2.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation ("androidx.appcompat:appcompat:1.3.0")
+    implementation ("com.google.android.material:material:1.4.0")
+    implementation ("androidx.constraintlayout:constraintlayout:2.0.4")
+    implementation ("com.google.firebase:firebase-messaging-ktx:23.3.1")
+    implementation ("androidx.legacy:legacy-support-v4:1.0.0")
+    implementation ("androidx.recyclerview:recyclerview:1.3.0")
+    implementation ("androidx.databinding:databinding-runtime:8.2.0")
+    testImplementation ("junit:junit:4.+")
+    androidTestImplementation ("androidx.test.ext:junit:1.1.3")
+    androidTestImplementation ("androidx.test.espresso:espresso-core:3.4.0")
 
     //Cannot fit requested classes in a single dex file 해결을 위해
     implementation 'com.android.support:multidex:1.0.3'
