--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         google()
         mavenCentral()
         maven { setUrl("https://devrepo.kakao.com/nexus/content/groups/public/") }
+        maven { setUrl("https://jitpack.io") }
     }
 }
 
