@date : 2023-12-26 @author : 김우렬 @version : 1.0.0:23122601 @comment : url 주소 Define 폴더로 통합

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         <activity android:name=".menu.myPage.RewardActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/WhiteActionBar">
+            android:theme="@style/RewardActionBar">
 
         </activity>
 
