--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'com.google.gms.google-services'
+    /*id 'com.google.gms.google-services'*/
 }
 
 android {
@@ -9,10 +9,10 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "kr.co.parnas"
+        applicationId "kr.co.parnashotel.rewards"
         minSdkVersion 28
-        targetSdkVersion 32
-        versionCode 23122601
+        targetSdkVersion 33
+        versionCode 23122701
         versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -108,7 +108,7 @@ dependencies {
     //QR코드 사용을 위한 라이브러리
     implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
 
-    //fcm
+    /*//fcm
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'*/
 }
