--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    /*id 'com.google.gms.google-services'*/
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -12,8 +12,8 @@ android {
         applicationId "kr.co.parnashotel.rewards"
         minSdkVersion 28
         targetSdkVersion 33
-        versionCode 23122702
-        versionName "1.0.0"
+        versionCode 23122701
+        versionName "0.9.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //Cannot fit requested classes in a single dex file 해결을 위해
@@ -108,7 +108,7 @@ dependencies {
     //QR코드 사용을 위한 라이브러리
     implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
 
-    /*//fcm
-    implementation platform('com.google.firebase:firebase-bom:29.0.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'*/
+    //fcm
+    implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
