--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { setUrl("https://devrepo.kakao.com/nexus/content/groups/public/") }
-        maven { setUrl("https://jitpack.io") }
+        maven { url "https://devrepo.kakao.com/nexus/content/groups/public/" }
+        maven { url "https://jitpack.io" }
     }
 }
 
