--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.4.2"
@@ -19,7 +20,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url "https://devrepo.kakao.com/nexus/content/groups/public/" }
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/'}
         maven { url "https://jitpack.io" }
     }
 }
