--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="kr.co.parnashotel">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" android:required="true" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
+
 
     <application
         android:name=".rewards.common.GlobalApplication"
@@ -21,21 +31,20 @@
         android:usesCleartextTraffic="true"
         tools:ignore="HardcodedDebugMode">
 
-        <meta-data
+        <!--<meta-data
             android:name="com.kakao.sdk.AppKey"
-            android:value="@string/kakao_app_key"/>
+            android:value="@string/kakao_app_key"/>-->
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:host="oauth"
+                <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
+                <data android:host="oauth"
                     android:scheme="@string/kakao_app_key_add_kakao" />
             </intent-filter>
         </activity>
@@ -76,6 +85,10 @@
             android:exported="true">
 
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="kakaotalk"/>
                 <data android:host="kakaotalk"/>
             </intent-filter>
@@ -107,5 +120,56 @@
                 android:resource="@xml/filepaths" />
         </provider>
     </application>
+
+    <queries>
+        <intent>
+            <action android:name="com.google.android.youtube.api.service.START" />
+        </intent>
+
+        <package android:name="com.kakao.talk" /> <!--카카오톡-->
+        <package android:name="kr.co.samsungcard.mpocket" />  <!--삼성 앱카드, 삼성 앱카드 공동인증서-->
+        <package android:name="com.shcard.smartpay" />  <!--신한 페이판-->
+        <package android:name="com.shinhancard.smartshinhan" />  <!--신한(ARS/일반결제/Smart결제), 신한 공동인증서-->
+        <package android:name="com.kbcard.cxh.appcard" />  <!--KBPay-->
+        <package android:name="com.kbstar.liivbank" />  <!--LiiV(국민은행)-->
+        <package android:name="com.kbstar.reboot" />  <!--new liib-->
+        <package android:name="kvp.jjy.MispAndroid320" />  <!--페이북/ISP-->
+        <package android:name="com.hanaskcard.paycla" />  <!--하나카드 원큐페이-->
+        <package android:name="kr.co.hanamembers.hmscustomer" />  <!--하나멤버스-->
+        <package android:name="com.lcacApp" />  <!--롯데 앱카드-->
+        <package android:name="nh.smart.nhallonepay" />  <!--NH 올원페이, NH 올원페이 공동인증서-->
+        <package android:name="com.wooricard.smartapp" />  <!--우리 WON 카드-->
+        <package android:name="com.hyundaicard.appcard" />  <!--현대 앱카드-->
+        <package android:name="kr.co.citibank.citimobile" />  <!--씨티카드-->
+
+        <!--공인인증-->
+        <package android:name="com.hanaskcard.rocomo.potal" />  <!--하나카드-->
+        <package android:name="com.lumensoft.touchenappfree" />  <!--공동인증서-->
+
+        <!--백신-->
+        <package android:name="com.TouchEn.mVaccine.webs" />  <!--TouchEn mVaccine(신한)-->
+        <package android:name="com.ahnlab.v3mobileplus" />  <!--V3(NH, 현대)-->
+        <package android:name="kr.co.shiftworks.vguardweb" />  <!--V-Guard(삼성)-->
+
+        <!--간편결제-->
+        <package android:name="com.samsung.android.spay" />  <!--삼성페이(삼성, 농협, KB)-->
+        <package android:name="com.samsung.android.spaylite" />  <!--삼성페이 미니(삼성, KB)-->
+        <package android:name="com.kakao.talk" />  <!--카카오페이-->
+        <package android:name="com.nhn.android.search" />  <!--네이버페이-->
+        <package android:name="com.ssg.serviceapp.android.egiftcertificate" />  <!--SSGPay(현대)-->
+        <package android:name="com.nhnent.payapp" />  <!--페이코(삼성, 농협, KB)-->
+        <package android:name="com.lge.lgpay" />  <!--엘지페이(삼성, KB)-->
+        <package android:name="com.lottemembers.android" />  <!--LPay-->
+        <package android:name="com.tencent.mm" /> <!-- 위챗페이-->
+        <package android:name="viva.republica.toss" /> <!-- 토스-->
+
+        <!--계좌이체-->
+        <package android:name="com.kftc.bankpay.android" />  <!--금결원-->
+
+        <!--본인인증-->
+        <package android:name="com.sktelecom.tauth" />  <!--SKT-->
+        <package android:name="com.kt.ktauth" />  <!--KT-->
+        <package android:name="com.lguplus.smartotp" />  <!--LGT-->
+    </queries>
 
 </manifest>
