--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
 
     <application
         android:name=".rewards.common.GlobalApplication"
-        android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,7 +27,7 @@
         android:debuggable="false"
         android:theme="@style/WhiteActionBar"
         android:usesCleartextTraffic="true"
-        tools:ignore="HardcodedDebugMode">
+        tools:ignore="DataExtractionRules,HardcodedDebugMode">
 
         <!--<meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -79,6 +78,23 @@
 
         <activity
             android:name="kr.co.parnashotel.rewards.menu.webview.WebViewActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="kakaotalk"/>
+                <data android:host="kakaotalk"/>
+            </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name="kr.co.parnashotel.rewards.menu.webview.WebViewActivity_V2"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
             android:exported="true">
