마이페이지 슬라이드 방식 변경

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,4 +128,6 @@ dependencies {
 
     //테드 퍼미션
     implementation("io.github.ParkSangGwon:tedpermission-normal:3.3.0")
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 }
